--- a/Tyuiu.SurnameNPTests.Sprint1.Task3.V10.Test/Tyuiu.SurnameNPTests.Sprint1.Task3.V10.Test.csproj
+++ b/Tyuiu.SurnameNPTests.Sprint1.Task3.V10.Test/Tyuiu.SurnameNPTests.Sprint1.Task3.V10.Test.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.SurnameNPTests.Sprint1.Task3.V10.Lib\Tyuiu.SurnameNPTests.Sprint1.Task3.V10.Lib.csproj">
+      <Project>{06171e6e-11d2-4bf8-9486-690ca58e8612}</Project>
+      <Name>Tyuiu.SurnameNPTests.Sprint1.Task3.V10.Lib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
