--- a/Tyuiu.SurnameNPTests.Sprint1.Task3.V10/Tyuiu.SurnameNPTests.Sprint1.Task3.V10.csproj
+++ b/Tyuiu.SurnameNPTests.Sprint1.Task3.V10/Tyuiu.SurnameNPTests.Sprint1.Task3.V10.csproj
@@ -49,5 +49,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.SurnameNPTests.Sprint1.Task3.V10.Lib\Tyuiu.SurnameNPTests.Sprint1.Task3.V10.Lib.csproj">
+      <Project>{06171e6e-11d2-4bf8-9486-690ca58e8612}</Project>
+      <Name>Tyuiu.SurnameNPTests.Sprint1.Task3.V10.Lib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
